--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,11 @@ main{
   margin-top: 100px;
 }
 
-a:link{
+a{
   color: black;
   font-weight: bold;
 }
 
-a:visited{
-  color: grey;
-}
 
 p{
   font-size: 1.125rem;
@@ -104,9 +101,57 @@ a:hover{
   color: #FED36E
 }
 
+.footer-navbar{
+  display:none;
+}
+
 
 @media (min-width: 768px ) {
+  footer p {
+    width: 65%;
+    margin: 0 auto;
+  }
+  .to-top{
+    display:none;
+  }
+
+  .navbar li, li a, .navbar, .footer-navbar, .footer-navbar li {
+    display: inline-block;
+  }
+  .footer-navbar{
+    float:right;
+    margin-top: 0;
+  }
+
+.footer-navbar li{
+  margin-left: 40px;
+}
+
+  .navbar li {
+    background-color: inherit;
+    padding: 0;
+    margin-left: 50px;
+  }
+  .navbar a{
+    padding:0;
+  }
+  .profile-pic{
+    width: 40%;
+    float: right;
+    margin-left: 30px;
+  }
+  .intro p {
+    text-align:justify;
+    width: 60%;
+  }
+  .project{
+    width: 50%;
+    float: left;
+  }
+}
+
+@media (min-width: 1024px){
 
 
-
+  
 }
