--- a/css/styles.css
+++ b/css/styles.css
@@ -63,16 +63,15 @@ section[id="portfolio"] {
 
 section[id="portfolio"] h2 {
   margin-bottom: 50px;
-  text-align: center;
+  flex-basis: 100%;
 }
 
 .portfolio-img {
   width: 95%;
-  margin: 20px 0 10px 0;
 }
 
 .project {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .project p {
